# multiyt-dlp

./: .gcignore  .gitignore  LICENSE  Multiyt-dlp.spec  README.md  index.html  main.py  multiyt-dlp.py  package.json  requirements.txt  tailwind.config.js  tsconfig.node.json  vite.config.ts
src/: App.tsx  _version.py  app_updater.py  config.py  constants.py  controller.py  dependencies.py  downloads.py  exceptions.py  gui.py  jobs.py  logging_config.py  main.tsx  url_extractor.py  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  models.rs
src-tauri/src/commands/: config.rs  downloader.rs  mod.rs  system.rs
src-tauri/src/core/: deps.rs  error.rs  logging.rs  manager.rs  mod.rs  native.rs  process.rs
src/api/: invoke.ts
src/components/: DownloadForm.tsx  DownloadGridItem.tsx  DownloadItem.tsx  DownloadQueue.tsx  EnvironmentGate.tsx  Layout.tsx  SplashWindow.tsx
src/components/settings/: AboutSettings.tsx  GeneralSettings.tsx  SettingsModal.tsx  TemplateEditor.tsx  YtdlpSettings.tsx
src/components/ui/: Button.tsx  Card.tsx  Modal.tsx  Progress.tsx  Toast.tsx  UpdateToast.tsx
src/contexts/: AppContext.tsx
src/gui_components/: dependency_progress_window.py  job_context_menu.py  settings_window.py
src/hooks/: useDownloadManager.ts
src/styles/: index.css
src/types/: index.ts
