[package]
name = "multiyt-dlp"
version = "0.1.0"
description = "A Tauri App for yt-dlp"
authors = ["zqil"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "dialog-open", "process-exit", "process-relaunch", "shell-open", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
thiserror = "1.0"
regex = "1.9"
uuid = { version = "1.4", features = ["v4", "serde"] }
once_cell = "1.18"
# NEW: For finding home directory
dirs = "5.0" 

# For POSIX-specific process signaling
[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
