[package]
name = "multiyt-dlp"
version = "2.0.0"
description = "A Tauri App for yt-dlp"
authors = ["zqil"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "dialog-open", "process-exit", "process-relaunch", "shell-open", "process-command-api", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
thiserror = "1.0"
regex = "1.9"
uuid = { version = "1.4", features = ["v4", "serde"] }
once_cell = "1.18"
dirs = "5.0" 
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "std"] }
tracing-appender = "0.2"
chrono = "0.4"

# NEW DEPENDENCIES
reqwest = { version = "0.11", features = ["stream", "json", "rustls-tls"] }
futures-util = "0.3"
zip = "0.6"
tar = "0.4"
xz2 = "0.1"
flate2 = "1.0"
async-trait = "0.1" 

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.27", features = ["signal"] }

# --- NATIVE UI DEPENDENCIES ---

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
